<resources>
    <string name="tfe_od_app_name" translation_description="Object Detection demo app [CHAR_LIMIT=40]">TFL Detect</string>
    <string name="tfe_od_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>
    <string name="frameText">Frame Resolution</string>
    <string name="frameText2">1920 x 1080</string>
    <string name="cropText">Cropped Frame Resolution</string>
    <string name="cropText2">640 x 480</string>
    <string name="inferenceText2">0.823 Seconds</string>
    <string name="inferenceText">Inference Time</string>
    <string name="threadText">Active Threads</string>
    <string name="activeThreadCount">1</string>
    <string name="addThreadDescription">Increase Active Thread Count</string>
    <string name="removeThreadDescription">Decrease Active Thread Count</string>
</resources>
